# sms-daemon

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  PduSMS.cpp  PduSMS.h  README.md  RecvSMS.cpp  RecvSMS.h  SendSMS.cpp  qq  rsserial.cpp  rsserial.h  serial.cpp  serial.h  sms-daemon-config.h  sms-daemon-mdm.cpp  sms-daemon-mdm.h  sms-daemon.cfg  sms-daemon.conf  sms-daemon.cpp  sms-daemon.h  tmp-sms  ut.cpp  ut.h  xmlParser.cpp  xmlParser.h
cmake/: install_sms_daemon.cmake.in
docs/: raspberry-pi-e1550-internet.md
scripts/: setup-e1550-ppp.sh
sms-app/: README.md  sms-access-checker.sh  sms-cmd.sh  sms-echo.sh
src/: Config.cpp  Config.h  PduSMS.cpp  PduSMS.h  RecvSMS.cpp  RecvSMS.h  SendSMS.cpp  SmsHookRunner.cpp  SmsHookRunner.h  Ussd.cpp  Ussd.h  gen-xml.cpp  gen-xml.hpp  rsserial.cpp  sms-daemon-config.h  sms-daemon-mdm.cpp  sms-daemon-mdm.h  sms-daemon.cpp  sms-daemon.h  ut.cpp  ut.h  version.h  xmlParser.cpp  xmlParser.h
systemd/: sms-daemon.service.in
tests/: on-sms.sh  test_config.cpp  test_pdu.cpp  test_ussd.cpp
